nawiasy dla semantyki denotacyjnej

--- a/Docs/felm.tex
+++ b/Docs/felm.tex
@@ -86,7 +86,7 @@ Składnia języka jest całkowicie zgodna z \cite[p.~3.1]{CC}, w związku z czym
 
 \subsection{Budowa grafu}
 
-semantyka denotacyjna
+$[\![$ semantyka denotacyjna $]\!]$
 
 \begin{prooftree}
 \AxiomC{A}
