komenda do nawiasów

--- a/Docs/felm.tex
+++ b/Docs/felm.tex
@@ -19,6 +19,8 @@
 \usepackage{amsmath}
 \usepackage{bussproofs}
 
+\newcommand{\denote}[1]{\text{$[\![ $#1$ ]\!]$}}
+
 %%%%%%%%%%%%%%%%%%
 % Kropka po numerze paragrafu, podparagrafu itp. 
 
@@ -86,7 +88,7 @@ Składnia języka jest całkowicie zgodna z \cite[p.~3.1]{CC}, w związku z czym
 
 \subsection{Budowa grafu}
 
-$[\![$ semantyka denotacyjna $]\!]$
+\denote{bleh}
 
 \begin{prooftree}
 \AxiomC{A}
