--- a/Docs/felm.tex
+++ b/Docs/felm.tex
@@ -18,6 +18,7 @@
 \usepackage{ulem}
 \usepackage{amsmath}
 \usepackage{bussproofs}
+\usepackage{url}
 
 \newcommand{\denote}[1]{\text{$[\![ $#1$ ]\!]$}}
 
@@ -215,7 +216,7 @@ nV &= \langle nVal , \langle FoldpV,f \rangle \rangle
 \end{align*}
 \item w innym przypadku:
 \begin{align*}
-E(g') = E(g) &\setminus \{ \langle v, \_, \_, \_ \rangle : \langle v, \_ , _, \_ \rangle \in E(g) \} \\ 
+E(g') = E(g) &\setminus \{ \langle v, \_, \_, \_ \rangle : \langle v, \_, \_, \_ \rangle \in E(g) \} \\ 
 &\cup \{ \langle v, v_t, k, NoChange\: d \rangle : \langle v, v_t , k, \_ \rangle \in E(g) \}
 \end{align*}
 \end{itemize}
